--- a/fase 03/index.html
+++ b/fase 03/index.html
@@ -22,7 +22,7 @@
 
     <main>
         <section class="card">
-            <h2>Meus Perfis de Imagem</h2>
+            <h2>Imagens</h2>
             <div class="galeria">
             <a href="https://docs.google.com/drawings/d/e/2PACX-1vRezabvOTzy7RzT4Q5euv2kkZbuYCohz0bB0sXxIuoiYjD0WhG4PHoOO5CPx_su0ss0uaMBpR7dbvgZ/pub?w=960&h=720" target="_blank">
                 <img src="https://docs.google.com/drawings/d/e/2PACX-1vRezabvOTzy7RzT4Q5euv2kkZbuYCohz0bB0sXxIuoiYjD0WhG4PHoOO5CPx_su0ss0uaMBpR7dbvgZ/pub?w=960&h=720" alt="Foto 1">
